--- a/nablapps/accounts/templates/accounts/edit_profile.html
+++ b/nablapps/accounts/templates/accounts/edit_profile.html
@@ -19,7 +19,7 @@
 
     <form class="col-md-9" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
         {% bootstrap_form form %}
-        <button type="submit" class="btn btn-lg btn-primary">Lagre endringer</button>
+        <button type="submit" class="btn btn-lg btn-nabla-blue-dark">Lagre endringer</button>
     </form>
 </div>
 {% endblock %}
