--- a/nablapps/accounts/templates/accounts/view_member_profile.html
+++ b/nablapps/accounts/templates/accounts/view_member_profile.html
@@ -28,7 +28,7 @@
         {% endif %}
         </h2>
         <br />
-        <table class="table table-striped table-bordered">
+        <table class="table table-striped table-bordered gtext">
             <tr>
                 <td>Brukernavn</td>
                 <td>{{ member.username }}</td>
