--- a/nablapps/album/templates/album/album_list.html
+++ b/nablapps/album/templates/album/album_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block main-blank %}
-    <h1>Bildealbum</h1>
+    <h1 style="color: black;">Bildealbum</h1>
     <div class="row">
         {% for album in albums %}
             <div class="col-xs-6 col-md-3 pb-3">
