--- a/nablapps/blog/templates/blog/blog_list.html
+++ b/nablapps/blog/templates/blog/blog_list.html
@@ -12,7 +12,7 @@
     {% endaddtoblock %}
     <h1>Nyeste blogginnlegg</h1>
 
-    <div class="list-group">
+    <div class="list-group>
         {% for post in post_list %}
             <div class="list-group-item">
                 <div class="row">
