--- a/nablapps/com/templates/com/committee_overview.html
+++ b/nablapps/com/templates/com/committee_overview.html
@@ -12,7 +12,7 @@
     {% endaddtoblock %}
 
 <div>
-    <h3 class="headline">Komiteer</h3>
+    <h3 class="headline col-lg-8">Komiteer</h3>
     <div class="grid-container">
         {% for c in committees %}
             <div class="grid-element">
@@ -32,7 +32,7 @@
 <br>
 
 <div>
-    <h3 class="headline">Interessegrupper</h3>
+    <h3 class="headline col-lg-8">Interessegrupper</h3>
     <div class="grid-container">
         {% for c in interest_groups %}
             <div class="grid-element">
