--- a/nablapps/events/templates/events/administer_penalties.html
+++ b/nablapps/events/templates/events/administer_penalties.html
@@ -58,6 +58,6 @@
     </tr>
     {% endfor %}
 </table>
-<button class="btn btn-primary float-right" type="submit" >Send inn</button>
+<button class="btn btn-nabla-blue-dark float-right" type="submit" >Send inn</button>
 </form>
 {% endblock %} {# block "content" #}
