--- a/nablapps/events/templates/events/event_administer.html
+++ b/nablapps/events/templates/events/event_administer.html
@@ -17,7 +17,7 @@
         <input type="text" class="form-control" name="text" maxlength="10" id="usernameInput"  placeholder="brukernavn" >
     </div>
     <input type="hidden" name="action" value="add" />
-    <button  type="submit" value="Legg til"  class="btn btn-primary mb-2 mr-2">Meld på bruker</button>
+    <button  type="submit" value="Legg til"  class="btn btn-nabla-blue-dark mb-2 mr-2">Meld på bruker</button>
     <div class="form-check mb-2 mr-sm-2">
         <input class="form-check-input"  type="checkbox" name="Regelboks" value="True" id="regelBoks">
         <label class="form-check-label" for="regelBoks">
