--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -93,7 +93,7 @@
     </button>
 
     {% elif event.should_have_started %}
-    <button class="btn btn-primary" type="submit" value="register_noshow_penalties">
+    <button class="btn btn-nabla-blue-dark" type="submit" value="register_noshow_penalties">
         Start arrangementet
     </button>
     {% elif not event.get_is_started %}
