--- a/nablapps/exchange/templates/exchange/exchange_frontpage.html
+++ b/nablapps/exchange/templates/exchange/exchange_frontpage.html
@@ -5,8 +5,8 @@
 
 {% block main %}
 <div class="container">
-    <h1>Utveksling</h1>
-    <div>
+    <h1 style="color:black;">Utveksling</h1>
+    <div style="color: black;">
     Her finner du informasjon om utveksling på FysMat. Les oppdateringer og nyheter fra internasjonal Seksjon ved NTNU her:
     <br>
     <a href="{{ ex_news_url }}"><b>Til nyheter om utveksling</b></a>
@@ -16,7 +16,7 @@
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
         <input type="submit" value="Søk"/>
     </form>
-    <p>Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling. Et universitet er krysset under en spesialiseringskolonne dersom minst en fysmatter med gitt spesialisering har studert der (og har registrert dette). Trykk på et universitet for å få opp en liste med studenter som har studert på et gitt universitet. Noen av dem har utvekslingsrapporter fra studenter som har studert der.</p>
+    <p style="color: black;">Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling. Et universitet er krysset under en spesialiseringskolonne dersom minst en fysmatter med gitt spesialisering har studert der (og har registrert dette). Trykk på et universitet for å få opp en liste med studenter som har studert på et gitt universitet. Noen av dem har utvekslingsrapporter fra studenter som har studert der.</p>
 
     <script src="/static/js/tabel.js" defer></script>
     <div style="overflow: auto">
