--- a/nablapps/interactive/templates/interactive/advent_admin.html
+++ b/nablapps/interactive/templates/interactive/advent_admin.html
@@ -53,7 +53,7 @@
                 </div>
             {% endif %}
 
-            <button type="submit" class="btn btn-primary btn-large">Bestem vinner</button>
+            <button type="submit" class="btn btn-nabla-blue-dark btn-large">Bestem vinner</button>
         </form>
     {% endif %}
 </div>
