--- a/nablapps/interactive/templates/interactive/codetask_list.html
+++ b/nablapps/interactive/templates/interactive/codetask_list.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 {% block main %}
 
-<h1> Webkoms kodegolf </h1>
-<p><i>Innenfor programmering finnes det mange ulike "sportsgrener". Noen handler om å løse en oppgave på kortest mulig tid, det vil si tiden det tar å skrive et fungerende program. Andre om å løse en oppgave på kortest mulig kjøretid, det vil si tiden programmet bruker på å løse oppgaven. En tredje kategori handler om å løse en oppgave på færrest mulig tegn; kodegolfing. Ordet kommer av at man i golf forsøker å komme seg rundt banen på færrest mulig slag.</i></p>
+<h1 style="color: black;"> Webkoms kodegolf </h1>
+<p style="color: black;">
+	<i>
+		Innenfor programmering finnes det mange ulike "sportsgrener".
+		 Noen handler om å løse en oppgave på kortest mulig tid, det vil si tiden det tar å skrive et fungerende program.
+		  Andre om å løse en oppgave på kortest mulig kjøretid, det vil si tiden programmet bruker på å løse oppgaven.
+		   En tredje kategori handler om å løse en oppgave på færrest mulig tegn; kodegolfing.
+		    Ordet kommer av at man i golf forsøker å komme seg rundt banen på færrest mulig slag.
+	</i>
+</p>
 <h4> 
-	<b> 
+	<b style="color: black;"> 
 		Nyeste oppgave:
 		{% if object_list.last == None %}
 		ingen oppgaver...
@@ -16,15 +24,15 @@
 
 <br>
 
-<h4> <b> Alle kodegolfer: </b> </h4>
+<h4 style="color:black;"> <b> Alle kodegolfer: </b> </h4>
 <table style="width:50%">
-	<tr>
+	<tr style="color: black;">
 		<th> Oppgave </th> 
 		<th> Beste resultat </th> 
 		<th> Ditt resultat </th>
 	</tr>
 	{% for task, bestResult, userResult in tasks %}
-		<tr>
+		<tr style="color: black;">
 			<td> <a href="{% url 'code_golf' task.id %}">{{task.title}}</a> </td>
 			<td> 
 				{% if bestResult != None %}
