--- a/nablapps/interactive/templates/interactive/quiz.html
+++ b/nablapps/interactive/templates/interactive/quiz.html
@@ -50,7 +50,7 @@
     </ul>
 {% endfor %}
     <input type="hidden" name="quiz_reply_id" value="{{ view.quiz_reply_id }}"/>
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-nabla-blue-dark">
         Send inn
     </button>
 </form>
