--- a/nablapps/interactive/templates/interactive/quiz_include.html
+++ b/nablapps/interactive/templates/interactive/quiz_include.html
@@ -42,7 +42,7 @@ jQuery(function ($) {
         </li>
     </ul>
 {% endfor %}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-nabla-blue-dark">
         Send inn
     </button>
 </form>
