--- a/nablapps/meeting_records/templates/meeting_records/meeting_record_detail.html
+++ b/nablapps/meeting_records/templates/meeting_records/meeting_record_detail.html
@@ -42,7 +42,7 @@
 
 {% include "content/includes/meta.html" with content=meeting_record %}
 {% if meeting_record.file %}
-<div><a class="btn btn-primary btn-large" href="{{ meeting_record.file.url }}">
+<div><a class="btn btn-nabla-blue-dark btn-large" href="{{ meeting_record.file.url }}">
         Last ned referat
 </a></div>
 {% endif %}
