--- a/nablapps/nabladet/templates/nabladet/nablad_list.html
+++ b/nablapps/nabladet/templates/nabladet/nablad_list.html
@@ -94,7 +94,7 @@
 	 
 {% endblock %}
 
-<h1>Nabladet</h1>
+<h1 style="color: black;">Nabladet</h1>
 
 {% for year,entries in nablad_archive.items %}
 
@@ -123,7 +123,6 @@
   </div>
 </div>
   {% endfor %}
-
-<a href="/contact/gullkorn/" class="btn btn-primary" >Lyst til å melde inn et gullkorn eller sitat?</a>
+<a href="/contact/gullkorn/" class="btn btn-nabla-blue-dark" >Lyst til å melde inn et gullkorn eller sitat?</a>
 <p class="footer-info">Nabladet er vårt kjære tidsskrift, som blir publisert av redaksjonen flere ganger i semesteret.</p> 
 {% endblock main %}
