--- a/nablapps/podcast/templates/podcast/podcast_detail.html
+++ b/nablapps/podcast/templates/podcast/podcast_detail.html
@@ -33,7 +33,7 @@
 {{ podcast.description|safe }}
 {% if podcast.file %}
 <div>
-<a class="btn btn-primary btn-large" href="{{ podcast.file.url }}" download>
+<a class="btn btn-nabla-blue-dark btn-large" href="{{ podcast.file.url }}" download>
     Last ned
 </a>
 </div>
