--- a/nablapps/poll/templates/poll/poll_list.html
+++ b/nablapps/poll/templates/poll/poll_list.html
@@ -8,7 +8,7 @@ Brukeravstemninger
 
 {% block content %}
 <br>
-<h3><a class="btn btn-primary" href="{% url "poll_user" %}">
+<h3><a class="btn btn-nabla-blue-dark" href="{% url "poll_user" %}">
 Mine avstemninger
 </a></h3>
 <br>
