--- a/nablapps/poll/templates/poll/user_polls.html
+++ b/nablapps/poll/templates/poll/user_polls.html
@@ -12,7 +12,7 @@
 {% block content %}
     <br>
     <div class="d-flex justify-content-between">
-        <h3><a class="btn btn-primary" href="{% url "poll_user_create" %}">Lag en ny avstemning</a></h3>
+        <h3><a class="btn btn-nabla-blue-dark" href="{% url "poll_user_create" %}">Lag en ny avstemning</a></h3>
         <h3 class="float-right"><a class="btn btn-outline-info" href="/admin/poll/poll">
             Legg til avstemningen på forsiden her
         </a></h3></div>
