--- a/nablapps/vote/templates/vote/voting_event_user_view.html
+++ b/nablapps/vote/templates/vote/voting_event_user_view.html
@@ -128,7 +128,7 @@
                     <option :value="null">Blank</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-nabla-blue-dark">Submit</button>
         </form>
         <span v-if="errors.length" class="text-danger">
             <ul>
@@ -199,7 +199,7 @@
                         <label class="form-check-label" :for="vote.pk + '_alternative_' + alternative.pk">[[ alternative.text ]]</label>
                     </div>
                 </span>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-nabla-blue-dark">Submit</button>
             </form>
          `,
      }
