--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
 <div class="main-grid-container">
     <div >
         {% block navbar %}
-            <h1 >Om Nabla</h1>
+            <h1 class="col-lg-8">Om Nabla</h1>
             <ul class="list-group nav-list">
                 <a href="{% url "om-nabla" %}"><li>Generelt om Nabla</li></a>
                 <a href="{% url "show-board-page" slug="styret" %}"><li>Styret</li></a>
