--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -31,7 +31,7 @@
                 {% bootstrap_field form.honeypot form_group_class="d-none" %}
 
                 <div class="form-actions">
-                    <button type="submit" name="post" class="btn btn-primary">Lagre</button>
+                    <button type="submit" name="post" class="btn btn-nabla-blue-dark">Lagre</button>
                     <button type="submit" name="preview" class="btn btn-default">Forhåndsvis</button>
                     <div class="float-right">
                         <button style="display:none;" class="btn btn-outline-secondary comment-help-btn">Vis hjelp</button>
