--- a/templates/nablashop/product_detail.html
+++ b/templates/nablashop/product_detail.html
@@ -9,12 +9,12 @@
 
     <!-- <form class="d-flex justify-content-left">
         <input type="number" value="1" aria-label="Search" class="form-data">
-        <button> class="btn btn-primary btn-md my-0 p" type="submit">
+        <button> class="btn btn-nabla-blue-dark btn-md my-0 p" type="submit">
             Add to cart
             <i class="fas fa-shopping-cart ml-1"></i> 
         </button>
     </form> -->
-    <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p" >
+    <a href="{{ object.get_add_to_cart_url }}" class="btn btn-nabla-blue-dark btn-md my-0 p" >
         Add to cart
         <i class="fas fa-shopping-cart ml-1"></i>
     </a> 
