--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -12,7 +12,7 @@
 <form method="get" action="" class="form-inline">
   <div class="form-group">
     <input type="text" name="q" id="id_q" class="form-control" autofocus style="" placeholder="Søk..." {% if query %}value="{{ query }}"{% endif %}/>
-    <button type="submit" class="btn btn-primary" value="Søk">
+    <button type="submit" class="btn btn-nabla-blue-dark" value="Søk">
       <span class="fas fa-search"></span>
       Søk
     </button><br />
