--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -18,7 +18,7 @@
 
 <h3>Kontaktinfo til styret</h3>
 
-<table class="table table-striped table-bordered" style="width:100%">
+<table class="table table-striped table-bordered gtext" style="width:100%">
     {% for element in board_emails %}
         <tr>
             <th>{{ element.0 }}</th>
@@ -29,7 +29,7 @@
 
 <h3>Øvrige gruppeleder- og stillings-epost</h3>
 
-<table class="table table-striped table-bordered" style="width:100%">
+<table class="table table-striped table-bordered gtext" style="width:100%">
     {% for element in nabla_pos_emails %}
         <tr>
             <th>{{ element.0 }}</th>
@@ -40,7 +40,7 @@
 
 <h3>Epost til undergruppene</h3>
 
-<table class="table table-striped table-bordered" style="width:100%">
+<table class="table table-striped table-bordered gtext" style="width:100%">
     {% for element in group_emails %}
         <tr>
             <th>{{ element.0 }}</th>
