--- a/nablapps/core/templates/core/general_about.html
+++ b/nablapps/core/templates/core/general_about.html
@@ -1,9 +1,9 @@
 {% extends "about.html" %}
 
 {% block content %}
-    <div>
+    <div class="col-lg-8">
         <h1>Linjeforeningen Nabla</h1>
-        <p>
+        <p class=>
             Nabla er linjeforeningen for sivilingeniørprogrammet Fysikk og matematikk ved NTNU. Du kan lese mer om studiet på NTNU sine nettsider. På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva som foregår. Ta gjerne turen innom nablakontoret i kontortida for kaffe, vafler og en hyggelig prat. Vi selger også kompendier.
         <br><br>
             <b>Styremøter torsdager kl.10:15-12:00</b><br>
