--- a/nablapps/events/templates/events/event_showuser.html
+++ b/nablapps/events/templates/events/event_showuser.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h2>Prikker og påmeldte arrangementer ({{ user.username }})</h2>
+<h2 class="gtext">Prikker og påmeldte arrangementer ({{ user.username }})</h2>
 
 {% if eventregistration_list %}
 <table class="table">
