--- a/nablapps/interactive/templates/interactive/advent_door_base_2016.html
+++ b/nablapps/interactive/templates/interactive/advent_door_base_2016.html
@@ -18,10 +18,10 @@
     {{ door.content|markdown:"unsafe" }}
     </p>
     {% if door.quiz %}
-    <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til quiz!</a></p>
+    <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-nabla-blue-dark">Gå til quiz!</a></p>
     {% endif %}
     {% if door.user_test %}
-    <p><a href="{{ door.user_test.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til brukertest!</a></p>
+    <p><a href="{{ door.user_test.get_absolute_url }}" class="btn btn-large btn-wide btn-nabla-blue-dark">Gå til brukertest!</a></p>
     {% endif %}
     {% if door.is_lottery %}
     {% if door.winner %}
@@ -41,7 +41,7 @@
                 {% endif %}
             </div>
             {% endif %}
-            <button type="submit" class="btn btn-large btn-primary">
+            <button type="submit" class="btn btn-large btn-nabla-blue-dark">
                 Delta i trekningen
             </button>
         </form>
