--- a/nablapps/interactive/templates/interactive/advent_door_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_door_base_2018.html
@@ -18,10 +18,10 @@
 	{{ door.content|markdown:"unsafe" }}
     </p>
     {% if door.quiz %}
-    <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til quiz!</a></p>
+    <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-nabla-blue-dark">Gå til quiz!</a></p>
     {% endif %}
     {% if door.user_test %}
-    <p><a href="{{ door.user_test.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til brukertest!</a></p>
+    <p><a href="{{ door.user_test.get_absolute_url }}" class="btn btn-large btn-wide btn-nabla-blue-dark">Gå til brukertest!</a></p>
     {% endif %} {# door.user_test #}
     {% if door.is_lottery %}
     {% if door.winner %}
@@ -44,7 +44,7 @@
             {% endif %} {# part #}
         </div>
         {% endif %} {# door.is_text_response #}
-        <button type="submit" class="btn btn-large btn-primary">
+        <button type="submit" class="btn btn-large btn-nabla-blue-dark">
 	    {% if part %}
 	    Endre svar
 	    {% else %}
