--- a/nablapps/interactive/templates/interactive/user_test_new.html
+++ b/nablapps/interactive/templates/interactive/user_test_new.html
@@ -15,7 +15,7 @@
         {% endfor %}
     </ul>
     {% endfor %}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-nabla-blue-dark">
         Send inn
     </button>
 </form>
