--- a/nablapps/poll/templates/poll/poll_create.html
+++ b/nablapps/poll/templates/poll/poll_create.html
@@ -41,7 +41,7 @@ Ny avstemning
 		{% endfor %}
 	</fieldset>
 	<div class="text-center">
-		<input type="submit" class="btn btn-block btn-primary bordered" value="Lagre avstemning"/>
+		<input type="submit" class="btn btn-block btn-nabla-blue-dark bordered" value="Lagre avstemning"/>
 	</div>
 	<br>
 	<br>
