--- a/templates/form.html
+++ b/templates/form.html
@@ -10,7 +10,7 @@
 <form method="post" action="" >
     {% csrf_token %}
     {% bootstrap_form form %}
-    <button class="btn btn-lg btn-primary" type="submit">Send</button>
+    <button class="btn btn-lg btn-nabla-blue-dark" type="submit">Send</button>
 </form>
 
 {% endblock %}
