--- a/templates/nablashop/includes/category-sidebar.html
+++ b/templates/nablashop/includes/category-sidebar.html
@@ -1,6 +1,6 @@
 <ul class="nav flex-column">
     <li class="nav-item">Sett inn Nablacoin på din konto:</li>
-    <li class="nav-item"><a class="btn btn-primary btn-sm" href="{% url 'officebeer_deposit' %}">Innskudd Nablacoin</a></li>
+    <li class="nav-item"><a class="btn btn-nabla-blue-dark btn-sm" href="{% url 'officebeer_deposit' %}">Innskudd Nablacoin</a></li>
     <p></p>
     <li class="nav-item">Filtrer varer:</li>
     <li class="nav-item"><a class="nav-link active" href="{% url 'nablashop:index' %}">Alle</a></li>
