--- a/templates/nablashop/index.html
+++ b/templates/nablashop/index.html
@@ -16,7 +16,7 @@
                         <p>{{ product.name }}</p>
                         <p>{{ product.price }} kr</p>
                         <p>{{ product.stock }} stk.</p>
-                        <p><a href="{% url 'nablashop:product_detail' product.id %}" class="btn btn-primary center-block"
+                        <p><a href="{% url 'nablashop:product_detail' product.id %}" class="btn btn-nabla-blue-dark center-block"
                               role="button">Les mer</a>
                     </div>
                 </div>
