--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -6,7 +6,7 @@
 
         <div class="table-responsive text nowrap">
         <h2>Oppsummering</h2>
-        <table class="table caption-top">
+        <table class="table caption-top gtext">
             <thead>
               <tr>
                 <th scope="col">#</th>
@@ -34,7 +34,7 @@
                   <td colspan="5">Handlevognen er tom</td>
               </tr>
               <td colspan="5">
-                <a class='btn btn-primary float-right' href='/shop/'>Fortsett å kjøpe</a>
+                <a class='btn btn-nabla-blue-dark float-right' href='/shop/'>Fortsett å kjøpe</a>
             </td>
               {% endfor %}
 
@@ -45,7 +45,7 @@
             <tr>
                 <td colspan="5">
                     <a class='btn btn-warning float-right ml-2' href='/shop/checkout/'>Betaling</a>
-                    <a class='btn btn-primary float-right' href='/shop/'>Fortsett å kjøpe</a>
+                    <a class='btn btn-nabla-blue-dark float-right' href='/shop/'>Fortsett å kjøpe</a>
                 </td>
             </tr>
             </tbody>
