Changed officeEvents window to seven days running instead of rest of current week

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -54,7 +54,7 @@
         <!--Kontoret-->
         <div class="office d-flex flex-column">
             <h5 class="nabla-frontpage-header">
-                Kontoret denne uka
+                Kontoret den neste uka
             </h5>
             {% include "officeCalendar/includes/list.html" %}
         </div>
