--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -53,7 +53,7 @@ office_events is a dictionary with weekday as key and a list of events as value
             <col width="25%">
 {#            <tr>#}
 {#                <th colspan="3" class="text-center card-img-top pt-3 pb-2 bg-secondary no_border">#}
-{#                    <h4 class="text-light">Kontoret denne uka</h4>#}
+{#                    <h4 class="text-light">Kontoret den neste uka</h4>#}
 {#                </th>#}
 {##}
 {#            </tr>#}
